src/main/kubefiles/pipeline/quarkus-build-event-listener-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-build-event-listener-route
  labels:
    app: quarkus-hello
spec:
  host: quarkus-hello-build.apps.ocp.lab.snimmo.com
  to:
    kind: Service
    name: el-quarkus-build-event-listener
    weight: 100
  port:
    targetPort: http-listener
  tls:
    termination: edge
  wildcardPolicy: None
